# spacetraders-data-platform

./: .env  .gitignore  .importlinter  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  actions.py  cache.db  config.py  fix_json_folder.py  ingestion-function.py  ingestion_function.py  main.py  main_test.py  mkdocs.yml  models.py  pyproject.toml  readme.txt  requirements-docs.txt  requirements.txt  run_OLD.py  runner.py  runner_state.py  runner_strategy.py  session.py  setup.py  spacetraders.db  test.dot  test_book.ipynb  testing_notes.md  tmp_frigate.txt
.codex/: README.md  plan.json
.openapi-generator/: FILES
actions/: __init__.py
analytics/: analytics.py
api/: api_async.py  client.py  normalizer.py  server.py
config/: settings.py
db/: async_session.py
display/: generate_diagrams.py  panel_app.py  st_panel_app.py
docs/: AcceptContract200Response.md  AcceptContract200ResponseData.md  AccountsApi.md  ActivityLevel.md  Agent.md  AgentEvent.md  AgentsApi.md  Chart.md  ChartTransaction.md  Construction.md  ConstructionMaterial.md  Contract.md  ContractDeliverGood.md  ContractPayment.md  ContractTerms.md  ContractsApi.md  Cooldown.md  CreateChart201Response.md  CreateChart201ResponseData.md  CreateShipShipScan201Response.md  CreateShipShipScan201ResponseData.md  CreateShipSystemScan201Response.md  CreateShipSystemScan201ResponseData.md  CreateShipWaypointScan201Response.md  CreateShipWaypointScan201ResponseData.md  CreateSurvey201Response.md  CreateSurvey201ResponseData.md  DataApi.md  DeliverContract200Response.md  DeliverContractRequest.md  (+180 more)
(+491 files in other folders)
