[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spacetraders-data-platform"
version = "0.1.0"
description = "A client and tools for interacting with the SpaceTraders API"
authors = [
    { name = "-", email = "-@-" }
]
readme = "README.md"
requires-python = ">=3.10"

# --- Runtime dependencies (your code needs these to run) ---
dependencies = [
    "requests",
    "requests-cache",
    "python-dotenv",
]

# --- Optional dependencies (extra groups) ---
[project.optional-dependencies]
dev = [
    "pytest",
    "isort",
    "black",
    "mypy",
    "ruff"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88